-Fixing stage cutoff on portrait mode -Adding moon

--- a/style/main.css
+++ b/style/main.css
@@ -5,14 +5,13 @@ html, body, * {
 
 #container {
 	width: 100%;
-	min-width: 512px;
 	height: 100vh;
 	min-height: 384px;
 	margin: 0px auto;
 	background: -webkit-linear-gradient(#000a26, #794283);
-  background: -o-linear-gradient(#000a26, #794283);
-  background: -moz-linear-gradient(#000a26, #794283);
-  background: linear-gradient(#000a26, #794283);
-  overflow: hidden;
-  position: absolute;
+	background: -o-linear-gradient(#000a26, #794283);
+	background: -moz-linear-gradient(#000a26, #794283);
+	background: linear-gradient(#000a26, #794283);
+	overflow: hidden;
+	position: absolute;
 }
